# task-tree-mcp

./: .gitignore  INSTALL_DEMO.md  INTEGRATION_TEST.md  LICENSE  MCP_SETUP.md  README.md  clear_database.py  example_usage.py  install_secure_task_tree.py  requirements.txt  setup.py  test_direct.py
mcp_server/: README.md  config.json  hook_validator.py  pyproject.toml  requirements.txt  server.py  simple_server.py
mcp_server/task_tree/: __init__.py  cli.py  task_graph.py  task_node.py
security_hooks/: claude_settings_patch.json  gentle_task_nudge.sh  post_tool_audit.sh  tool_audit_hook.py
src/task_tree/: cli.py  context_injector.py  task_graph.py  task_node.py
