[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-tree-mcp"
version = "1.0.0"
description = "Task Tree MCP Server - Hierarchical task management for AI agents"
authors = [
    {name = "Keith Lohnes"}
]
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "rich>=13.0"
]
requires-python = ">=3.8"

[project.scripts]
task-tree-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["task_tree"]